--- a/style.css
+++ b/style.css
@@ -14,10 +14,14 @@ nav {
     justify-content: space-between;
     align-items: center;
     padding: 20px;
-    background-color: black;
+    
     color: white;
 }
 /*Dropdown Menu*/
+
+.hamburger{
+    display: none;
+}
 
 nav ul{
     display: flex;
@@ -34,32 +38,30 @@ nav ul a li {
 nav ul a li:hover{
     color: turquoise;
 }
-.dropdown{
-    position: relative;
-    display: inline-block;
-}
-.dropdownContent{
-    display: none;
-    position: absolute;
+
+
+@media only screen and (max-width: 650px) {
+nav ul{
+    position: fixed;
+    text-align: center;
+    top: 50px;
+    flex-direction: column;
     background-color: black;
-    min-width: 120px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    z-index: 1;
+    width: 100%;
+    border-radius: 10px;
+    transition: 0.3s;
+    box-shadow: 0 10px 27px rgba(0,0,0,0.05);
+    right: 10px;
 }
-.dropdownItem{
-    color: white;
-    padding: 20px 15px;
-    text-decoration: none;
-    display: block;
-    border-bottom: 1px white solid;
-    font-size: 15px;
-  }
-.dropdownItem:hover {
-    color: turquoise;
+nav ul li{
+    padding:15px 0px 15px 0px;
+    background-color: black;
+    border-bottom: 1px solid white;
+    border-top: 1px solid white;
+    
 }
-.dropdown:hover .dropdownContent {
+.hamburger{
     display: block;
 }
-.dropdown:hover .dropbtn {
-    color:turquoise;
+
 }
