--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap');
+
 * {
     box-sizing: border-box;
     margin: 0;
@@ -7,6 +9,8 @@ body{
     background-color: black;
     scroll-behavior: smooth;
     font-family: sans-serif;
+    color: white;
+    
 }
 
 
@@ -39,6 +43,7 @@ nav ul a{
     color: white;
     list-style: none;
     text-decoration: none;
+    
 }
 nav ul a li {
     margin-left: 15px;
@@ -62,6 +67,7 @@ nav ul a li:hover{
     box-shadow: 0 10px 27px rgba(0,0,0,0.05);
     right: 10px;
     color: black;
+    display: none;
     
 
 }
@@ -81,4 +87,31 @@ nav ul li:hover {
     color: white;
 }
 
+}
+
+.row{
+    text-align: center;
+}
+
+/*ABOUT ME SECTION*/
+.aboutMeSection{
+    margin-top: 200px;
+    margin-bottom:200px ;
+    text-align: center;
+    max-width: 600px;
+    margin: auto;
+}
+
+.hello{
+    font-family: 'Dancing Script', cursive;
+    font-size:200px;
+    padding: 20px;
+    color: white;
+}
+
+
+/*POROJECTS*/
+
+#projectsTitle{
+    text-align: center;
 }
