--- a/style.css
+++ b/style.css
@@ -4,10 +4,10 @@
     box-sizing: border-box;
     margin: 0;
     padding: 0;
+    scroll-behavior: smooth;
 }
 body{
     background-color: black;
-    scroll-behavior: smooth;
     font-family: sans-serif;
     color: white;
     
@@ -94,12 +94,21 @@ nav ul li:hover {
 }
 
 /*ABOUT ME SECTION*/
+div h2{
+    display: flex;
+    justify-content: center;
+}
+div h2 span:hover{
+    transform: scaleY(1.5);
+    color: turquoise;
+}
+
 .aboutMeSection{
-    margin-top: 200px;
-    margin-bottom:200px ;
     text-align: center;
     max-width: 600px;
     margin: auto;
+    margin-top: 150px;
+    margin-bottom: 200px;
 }
 
 .hello{
