--- a/style.css
+++ b/style.css
@@ -104,7 +104,7 @@ div h2 span:hover{
     text-align: center;
     max-width: 600px;
     margin: auto;
-    margin-top: 150px;
+    margin-top: 100px;
     margin-bottom: 200px;
 }
 
@@ -114,6 +114,22 @@ div h2 span:hover{
     padding: 20px;
     color: white;
 }
+.text{
+    margin-bottom: 50px;
+}
+
+
+/*PROJECTS BUTTON STYLING*/
+#projectBtn{
+    background-color: transparent;
+    border: 1px solid turquoise;
+    padding: 10px 25px 10px 25px;
+    cursor: pointer;
+    color:turquoise;
+    text-decoration: none;
+
+}
+
 
 
 /*POROJECTS*/
