--- a/styles/style.scss
+++ b/styles/style.scss
@@ -120,18 +120,46 @@ div h2 span:hover{
 
 /*PROJECTS BUTTON STYLING*/
 #projectBtn{
+    color:turquoise;
+    cursor: pointer;
+    padding: 10px 25px 10px 25px;
+    position: relative;
     transition-property: all;
     transition-duration: .6s;
     transition-timing-function: ease;
     background-color: transparent;
-    border: 1px solid turquoise;
-    padding: 10px 25px 10px 25px;
+    
     text-align: center;
-    cursor: pointer;
-    color:turquoise;
     text-decoration: none;
+    width: 100%;
+    svg{
+        position: absolute;
+        background-color: tr;
+        left: 0px;
+        top: 0;
+        width: 100%;
+        height: 37px;
+    }
+    rect{
+        fill: none;
+        stroke: turquoise;
+        stroke-width: 2;
+        stroke-dasharray: 422, 0;
+        transition: all 0.35s linear;
+    }
     
 }
+
+#projectBtn:hover{
+background-color: black;
+font-weight: 900;
+letter-spacing: 1px;
+    rect{
+stroke-width: 5;
+stroke-dasharray: 15, 310;
+stroke-dashoffset: 48;
+transition: all 1.3s cubic-bezier(0.19, 1, 0.22, 1);
+}}
 
 
 
