--- a/styles/style.css
+++ b/styles/style.css
@@ -134,6 +134,11 @@ div h2 span:hover {
 }
 
 /*PROJECTS BUTTON STYLING*/
+.row {
+  max-width: 2000px;
+  margin: auto;
+}
+
 #projectBtn {
   color: turquoise;
   cursor: pointer;
@@ -186,5 +191,43 @@ div h2 span:hover {
 /*POROJECTS*/
 #projectsTitle {
   text-align: center;
+}
+
+figure img {
+  border-top-right-radius: 20px;
+  border-top-left-radius: 20px;
+}
+
+figcaption {
+  background-color: black;
+  border: 1px solid white;
+  border-top: none;
+  width: 400px;
+  margin: auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  text-align: center;
+  border-bottom-right-radius: 20px;
+  border-bottom-left-radius: 20px;
+}
+
+figcaption a {
+  border: 1px solid turquoise;
+  background-color: turquoise;
+  color: black;
+  width: 120px;
+  margin-bottom: 10px;
+  margin-top: 5px;
 }
 /*# sourceMappingURL=style.css.map */
