--- a/styles/style.css
+++ b/styles/style.css
@@ -255,9 +255,11 @@ figcaption a:hover {
 
 /*CONTACT ME SECTION*/
 #contactMe {
-  background-color: #09776c;
-  margin-top: 30px;
-  color: black;
+  border-top: 1px solid white;
+  width: 500px;
+  margin: auto;
+  margin-top: 70px;
+  color: white;
 }
 
 #ConnectWithMeTitle {
@@ -270,14 +272,14 @@ figcaption a:hover {
 }
 
 .socialMediaIcons a {
-  color: black;
+  color: white;
   margin: 20px;
 }
 
 .socialMediaIcons a:hover {
   font-size: 15px;
   text-decoration: none;
-  color: white;
+  color: turquoise;
 }
 
 footer {
