--- a/styles/style.css
+++ b/styles/style.css
@@ -17,16 +17,6 @@ body {
 }
 
 /*NAVIGATION BAR*/
-.hidden {
-  display: none;
-}
-
-.notHidden {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-}
-
 h1 {
   font-family: sans-serif;
 }
@@ -46,7 +36,16 @@ nav {
 }
 
 .hamburger {
-  color: black;
+  color: white;
+  display: none;
+}
+
+.close {
+  position: absolute;
+  color: green;
+  top: 1.490rem;
+  right: 1.134rem;
+  display: none;
 }
 
 .navList {
@@ -66,42 +65,73 @@ nav ul a li:hover {
 }
 
 @media only screen and (max-width: 750px) {
+  .hamburger {
+    display: block;
+  }
   .navList {
-    position: fixed;
-    text-align: center;
-    top: 50px;
+    -webkit-clip-path: circle(0% at 96.5% 4%);
+            clip-path: circle(0% at 96.5% 4%);
+    opacity: 0.6;
+    position: absolute;
+    background: #2c2929;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+    -webkit-transition: all 0.5s cubic-bezier(0.23, 0.93, 0.23, 0.93);
+    transition: all 0.5s cubic-bezier(0.23, 0.93, 0.23, 0.93);
+  }
+  nav ul {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
             flex-direction: column;
-    background-color: black;
-    width: 100%;
-    border-radius: 10px;
-    -webkit-transition: 0.5s;
-    transition: 0.5s;
-    -webkit-box-shadow: 0 10px 27px rgba(0, 0, 0, 0.05);
-            box-shadow: 0 10px 27px rgba(0, 0, 0, 0.05);
-    right: 10px;
-    color: black;
-    display: none;
+    height: 100vh;
   }
-  nav ul li {
-    padding: 15px 0px 15px 0px;
-    background-color: black;
-    border-bottom: 1px solid white;
-    border-top: 1px solid white;
+  nav ul a li {
+    padding: 0.5rem 1rem;
   }
-  nav ul li:hover {
-    color: turquoise;
-  }
-  .hamburger {
-    display: block;
-    color: white;
+  nav ul a {
+    font-size: 1.5rem;
+    background: -webkit-linear-gradient(45deg, #087e47 0%, #15bed4 50%, rgba(11, 99, 231, 0.685) 100%);
+    background-clip: text;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
   }
 }
 
-.row {
-  text-align: center;
+nav li {
+  -webkit-animation: animateIn 360ms ease-in-out calc(var(--animation-order) * 100ms) both;
+          animation: animateIn 360ms ease-in-out calc(var(--animation-order) * 100ms) both;
+}
+
+.active {
+  -webkit-clip-path: circle(140% at 96.5% 4%);
+          clip-path: circle(140% at 96.5% 4%);
+  -webkit-transition: all 0.7s cubic-bezier(0.23, 0.93, 0.23, 0.93);
+  transition: all 0.7s cubic-bezier(0.23, 0.93, 0.23, 0.93);
+  opacity: 100%;
+}
+
+.reverse_anim {
+  -webkit-clip-path: circle(0% at 96.5% 4%);
+          clip-path: circle(0% at 96.5% 4%);
+  opacity: 0.6;
+  -webkit-transition: all 0.4s cubic-bezier(0.23, 0.93, 0.23, 0.93);
+  transition: all 0.4s cubic-bezier(0.23, 0.93, 0.23, 0.93);
+}
+
+.show {
+  display: block;
 }
 
 /*ABOUT ME SECTION*/
@@ -143,6 +173,7 @@ div h2 span:hover {
 .row {
   max-width: 2000px;
   margin: auto;
+  text-align: center;
 }
 
 #projectBtn {
@@ -292,5 +323,21 @@ footer {
   background-color: black;
   color: white;
   padding: 20px;
+}
+
+/*PHONE SCREEN*/
+@media only screen and (max-width: 750px) {
+  #contactMe {
+    width: 300px;
+  }
+  .socialMediaIcons {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
 }
 /*# sourceMappingURL=style.css.map */
