--- a/styles/style.scss
+++ b/styles/style.scss
@@ -18,13 +18,6 @@ body{
 
 
 /*NAVIGATION BAR*/
-.hidden{
-    display: none;
-}
-
-.notHidden{
-    display: flex;
-}
 h1{
     font-family: sans-serif;
 }
@@ -35,10 +28,22 @@ nav {
     align-items: center;
     padding: 20px 20px 0px 20px;
     color: white;
+    
+
 }
 
+
 .hamburger{
-    color: black;
+    color: white;
+    display: none;
+}
+
+.close{
+    position: absolute;
+    color: green;
+    top: 1.490rem;
+    right: 1.134rem;
+    display: none;
 }
 
 .navList{
@@ -57,42 +62,72 @@ nav ul a li:hover{
 
 
 @media only screen and (max-width: 750px) {
-.navList{
-    position: fixed;
-    text-align: center;
-    top: 50px;
+    .hamburger{
+        display: block;
+    }
+    
+    
+    .navList {
+        clip-path: circle(0% at 96.5% 4%);
+        opacity: 0.6;
+        position: absolute;
+        background: rgb(44, 41, 41);
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100vh;
+        transition: all 0.5s cubic-bezier(0.23, 0.93, 0.23, 0.93); 
+    
+    }
+    nav ul {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     flex-direction: column;
-    background-color: black;
-    width: 100%;
-    border-radius: 10px;
-    transition: 0.5s;
-    box-shadow: 0 10px 27px rgba(0,0,0,0.05);
-    right: 10px;
-    color: black;
-    display: none;
-    
+    height: 100vh;
+    }
+
+    nav ul a li {
+        padding: 0.5rem 1rem;
+    }
+  
+    nav ul a {
+          font-size: 1.5rem;
+          background: -webkit-linear-gradient(
+            45deg,
+            rgb(8, 126, 71) 0%,
+            rgb(21, 190, 212) 50%,
+            rgba(11, 99, 231, 0.685) 100%
+          );
+          background-clip: text;
+          -webkit-background-clip: text;
+          -webkit-text-fill-color: transparent;
+    }
+   
 
 }
-nav ul li{
-    padding:15px 0px 15px 0px;
-    background-color: black;
-    border-bottom: 1px solid white;
-    border-top: 1px solid white;
-    
-}
-nav ul li:hover {
-    color:turquoise;
-}
-.hamburger{
+
+nav li {
+    animation: animateIn 360ms ease-in-out
+    calc(var(--animation-order) * 100ms) both;
+    }
+
+.active {
+    clip-path: circle(140% at 96.5% 4%);
+    transition: all 0.7s cubic-bezier(0.23, 0.93, 0.23, 0.93);
+    opacity: 100%;
+    }
+     
+.reverse_anim {
+    clip-path: circle(0% at 96.5% 4%);
+    opacity: 0.6;
+    transition: all 0.4s cubic-bezier(0.23, 0.93, 0.23, 0.93);
+    }
+.show{
     display: block;
-    color: white;
 }
+    
 
-}
-
-.row{
-    text-align: center;
-}
 
 /*ABOUT ME SECTION*/
 div h2{
@@ -124,9 +159,11 @@ div h2 span:hover{
 
 
 /*PROJECTS BUTTON STYLING*/
+
 .row{
     max-width: 2000px;
     margin: auto;
+    text-align: center;
 }
 #projectBtn{
     color:turquoise;
@@ -225,7 +262,7 @@ figcaption a:hover{
    border-top: 1px solid white;
    width: 500px;
    margin: auto;
-margin-top: 70px;
+   margin-top: 70px;
    color: white;
     
 
@@ -254,4 +291,15 @@ footer{
     background-color: black;
     color: white;
     padding: 20px;
+}
+/*PHONE SCREEN*/
+@media only screen and (max-width: 750px) {
+    #contactMe{
+        width: 300px;
+    }
+    .socialMediaIcons{
+        display: flex;
+        flex-direction: column;
+    }
+
 }
