--- a/styles/style.scss
+++ b/styles/style.scss
@@ -40,10 +40,11 @@ nav {
 
 .close{
     position: absolute;
-    color: green;
+    color: black;
     top: 1.490rem;
     right: 1.134rem;
     display: none;
+    z-index: 2;
 }
 
 .navList{
@@ -76,7 +77,8 @@ nav ul a li:hover{
         left: 0;
         width: 100%;
         height: 100vh;
-        transition: all 0.5s cubic-bezier(0.23, 0.93, 0.23, 0.93); 
+        transition: all 0.5s cubic-bezier(0.23, 0.93, 0.23, 0.93);
+        z-index: 1; 
     
     }
     nav ul {
@@ -88,7 +90,7 @@ nav ul a li:hover{
     }
 
     nav ul a li {
-        padding: 0.5rem 1rem;
+        padding: 1rem 1rem;
     }
   
     nav ul a {
@@ -100,6 +102,7 @@ nav ul a li:hover{
             rgba(11, 99, 231, 0.685) 100%
           );
           background-clip: text;
+          color: transparent;
           -webkit-background-clip: text;
           -webkit-text-fill-color: transparent;
     }
@@ -149,9 +152,12 @@ div h2 span:hover{
 
 .hello{
     font-family: 'Dancing Script', cursive;
-    font-size:180px;
+    font-size:160px;
     padding: 20px;
     color: white;
+}
+#introParagraph{
+    font-weight: 700;
 }
 .text{
     margin-bottom: 50px;
