removed gradient text colour as it wasnt compatible with mobile

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -95,13 +95,7 @@ nav ul a li:hover{
   
     nav ul a {
           font-size: 1.5rem;
-          background: -webkit-linear-gradient(
-            45deg,
-            rgb(8, 126, 71) 0%,
-            rgb(21, 190, 212) 50%,
-            rgba(11, 99, 231, 0.685) 100%
-          );
-          
+          color: white;          
     }
    
 
