--- a/styles/style.css
+++ b/styles/style.css
@@ -104,7 +104,7 @@ nav ul a li:hover {
   }
   nav ul a {
     font-size: 1.5rem;
-    background: -webkit-linear-gradient(45deg, #087e47 0%, #15bed4 50%, rgba(11, 99, 231, 0.685) 100%);
+    color: white;
   }
 }
 
