--- a/styles/style.scss
+++ b/styles/style.scss
@@ -176,7 +176,7 @@ div h2 span:hover{
     width: 100%;
     svg{
         position: absolute;
-        background-color: tr;
+        background-color: transparent;
         left: 0px;
         top: 0;
         width: 100%;
@@ -203,7 +203,18 @@ stroke-dashoffset: 48;
 transition: all 1.3s cubic-bezier(0.19, 1, 0.22, 1);
 }}
 
-
+@media only screen and(max-width: 750px){
+    #projectBtn:hover{
+        transition: none;
+        border: 1px solid turquoise;
+        rect{
+            transition: none;
+            stroke-width: 0;
+            stroke-dasharray: 0, 0;
+            stroke-dashoffset: 0;
+        }
+    }
+}
 
 /*POROJECTS*/
 
