--- a/styles/style.css
+++ b/styles/style.css
@@ -11,7 +11,7 @@
 
 body {
   background-color: #1f1f1f;
-  font-family: 'Roboto', sans-serif;
+  font-family: "Roboto", sans-serif;
   font-weight: 100;
   color: white;
 }
@@ -43,7 +43,7 @@ nav {
 .close {
   position: absolute;
   color: black;
-  top: 1.490rem;
+  top: 1.49rem;
   right: 1.134rem;
   display: none;
   z-index: 2;
@@ -158,7 +158,7 @@ div h2 span:hover {
 }
 
 .hello {
-  font-family: 'Dancing Script', cursive;
+  font-family: "Dancing Script", cursive;
   font-size: 160px;
   padding: 20px;
   color: white;
@@ -186,8 +186,8 @@ div h2 span:hover {
   position: relative;
   -webkit-transition-property: all;
   transition-property: all;
-  -webkit-transition-duration: .6s;
-          transition-duration: .6s;
+  -webkit-transition-duration: 0.6s;
+          transition-duration: 0.6s;
   -webkit-transition-timing-function: ease;
           transition-timing-function: ease;
   background-color: transparent;
@@ -243,21 +243,29 @@ div h2 span:hover {
   }
 }
 
-/*POROJECTS*/
-#projectsTitle {
-  text-align: center;
+/*PROJECTS (HOMEPAGE)*/
+#projects .projectContainer {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
-figure img {
-  border-top-right-radius: 20px;
-  border-top-left-radius: 20px;
+#projects .projectGroup {
+  width: 300px;
+  height: 300px;
+  background-color: gray;
+}
+
+/*POROJECTS PAGE */
+#projectsTitle {
+  text-align: center;
+  margin-bottom: 20px;
 }
 
 figcaption {
-  background-color: black;
-  border: 1px solid white;
-  border-top: none;
-  width: 400px;
   margin: auto;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -273,8 +281,6 @@ figcaption {
       -ms-flex-align: center;
           align-items: center;
   text-align: center;
-  border-bottom-right-radius: 20px;
-  border-bottom-left-radius: 20px;
 }
 
 figcaption a {
