--- a/styles/style.scss
+++ b/styles/style.scss
@@ -224,6 +224,9 @@ div h2 span:hover {
   background-color: gray;
   margin: 20px;
 }
+#projects .projectContainer .projectGroup:hover {
+  transform: scale3d(1.1);
+}
 #projects .projectContainer .projectGroup p {
   text-align: center;
   display: flex;
@@ -240,6 +243,11 @@ div h2 span:hover {
 }
 
 /*POROJECTS PAGE */
+.backBtn a i {
+  text-decoration: none;
+  margin: 20px;
+  color: white;
+}
 #projectPageTitle {
   text-align: center;
   font-size: 50px;
