added a case study page

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -340,3 +340,9 @@ footer {
     flex-direction: column;
   }
 }
+
+/*SKATERWAY CASE STUDY*/
+#skaterWaySecOne img {
+  max-width: 100%;
+  height: auto;
+}
