--- a/styles/style.css
+++ b/styles/style.css
@@ -2,7 +2,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap");
 * {
   -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
   margin: 0;
   padding: 0;
   scroll-behavior: smooth;
@@ -26,11 +26,11 @@ nav {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
   -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
   padding: 20px 20px 0px 20px;
   color: white;
 }
@@ -71,7 +71,7 @@ nav ul a li:hover {
   }
   .navList {
     -webkit-clip-path: circle(0% at 96.5% 4%);
-            clip-path: circle(0% at 96.5% 4%);
+    clip-path: circle(0% at 96.5% 4%);
     opacity: 0.6;
     position: absolute;
     background: #615e5e;
@@ -88,15 +88,15 @@ nav ul a li:hover {
     display: -ms-flexbox;
     display: flex;
     -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
+    -ms-flex-pack: center;
+    justify-content: center;
     -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
+    -ms-flex-align: center;
+    align-items: center;
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
+    -ms-flex-direction: column;
+    flex-direction: column;
     height: 100vh;
   }
   nav ul a li {
@@ -109,13 +109,15 @@ nav ul a li:hover {
 }
 
 nav li {
-  -webkit-animation: animateIn 360ms ease-in-out calc(var(--animation-order) * 100ms) both;
-          animation: animateIn 360ms ease-in-out calc(var(--animation-order) * 100ms) both;
+  -webkit-animation: animateIn 360ms ease-in-out
+    calc(var(--animation-order) * 100ms) both;
+  animation: animateIn 360ms ease-in-out calc(var(--animation-order) * 100ms)
+    both;
 }
 
 .active {
   -webkit-clip-path: circle(140% at 96.5% 4%);
-          clip-path: circle(140% at 96.5% 4%);
+  clip-path: circle(140% at 96.5% 4%);
   -webkit-transition: all 0.7s cubic-bezier(0.23, 0.93, 0.23, 0.93);
   transition: all 0.7s cubic-bezier(0.23, 0.93, 0.23, 0.93);
   opacity: 100%;
@@ -123,7 +125,7 @@ nav li {
 
 .reverse_anim {
   -webkit-clip-path: circle(0% at 96.5% 4%);
-          clip-path: circle(0% at 96.5% 4%);
+  clip-path: circle(0% at 96.5% 4%);
   opacity: 0.6;
   -webkit-transition: all 0.4s cubic-bezier(0.23, 0.93, 0.23, 0.93);
   transition: all 0.4s cubic-bezier(0.23, 0.93, 0.23, 0.93);
@@ -139,13 +141,13 @@ div h2 {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
 }
 
 div h2 span:hover {
   -webkit-transform: scaleY(1.5);
-          transform: scaleY(1.5);
+  transform: scaleY(1.5);
   color: turquoise;
 }
 
@@ -181,9 +183,9 @@ div h2 span:hover {
   -webkit-transition-property: all;
   transition-property: all;
   -webkit-transition-duration: 0.6s;
-          transition-duration: 0.6s;
+  transition-duration: 0.6s;
   -webkit-transition-timing-function: ease;
-          transition-timing-function: ease;
+  transition-timing-function: ease;
   background-color: transparent;
   text-align: center;
   text-decoration: none;
@@ -255,13 +257,13 @@ div h2 span:hover {
   display: -ms-flexbox;
   display: flex;
   -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
+  flex-wrap: wrap;
   -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
   -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
   max-width: 1250px;
   margin: auto;
 }
@@ -275,7 +277,7 @@ div h2 span:hover {
 
 #projects .projectContainer .projectGroup:hover {
   -webkit-transform: scale3d(1.1);
-          transform: scale3d(1.1);
+  transform: scale3d(1.1);
 }
 
 #projects .projectContainer .projectGroup p {
@@ -284,11 +286,11 @@ div h2 span:hover {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
   -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
   height: 70px;
   font-weight: 900;
   font-size: 25px;
@@ -317,13 +319,13 @@ div h2 span:hover {
   display: -ms-flexbox;
   display: flex;
   -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
+  flex-wrap: wrap;
   -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
   -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
   max-width: 1300px;
   margin: auto;
 }
@@ -333,7 +335,7 @@ div h2 span:hover {
   height: auto;
   margin: 5px;
   -ms-flex-preferred-size: 33.3%;
-      flex-basis: 33.3%;
+  flex-basis: 33.3%;
 }
 
 figure,
@@ -343,14 +345,14 @@ figcaption {
   display: flex;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
   -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
   -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
   text-align: center;
 }
 
@@ -408,8 +410,8 @@ figcaption a:hover {
 
 footer {
   -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -428,8 +430,18 @@ footer {
     display: flex;
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
+    -ms-flex-direction: column;
+    flex-direction: column;
   }
+}
+
+/*SKATERWAY CASE STUDY*/
+#skaterWaySecOne img,
+#skaterWaySecTwo img {
+  max-width: 100%;
+  height: auto;
+}
+#skaterWaySecTwo img {
+  margin-top: -5px;
 }
 /*# sourceMappingURL=style.css.map */
