--- a/styles/style.scss
+++ b/styles/style.scss
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Bubblegum+Sans&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap");
 
 * {
@@ -10,10 +11,10 @@
 }
 
 body {
-  background-color: rgb(31, 31, 31);
+  background-color: white;
   font-family: "Roboto", sans-serif;
   font-weight: 100;
-  color: white;
+  color: black;
 }
 
 /*NAVIGATION BAR*/
@@ -27,10 +28,10 @@ nav {
   align-items: center;
   padding: 20px 20px 0px 20px;
   color: white;
+  background-color: black;
 }
 
 .hamburger {
-  color: white;
   display: none;
 }
 
@@ -52,6 +53,7 @@ nav ul a li {
   list-style: none;
   color: white;
 }
+
 nav ul a li:hover {
   color: turquoise;
 }
@@ -65,7 +67,7 @@ nav ul a li:hover {
     clip-path: circle(0% at 96.5% 4%);
     opacity: 0.6;
     position: absolute;
-    background: rgb(97, 94, 94);
+    background: turquoise;
     top: 0;
     left: 0;
     width: 100%;
@@ -117,7 +119,6 @@ div h2 {
   justify-content: center;
 }
 div h2 span:hover {
-  transform: scaleY(1.5);
   color: turquoise;
 }
 
@@ -129,11 +130,10 @@ div h2 span:hover {
   margin-bottom: 200px;
 }
 
-.hello {
+.ml11 {
   font-family: "Dancing Script", cursive;
-  font-size: 160px;
-  padding: 20px;
-  color: white;
+  font-size: 100px;
+  padding: 50px;
 }
 #introParagraph {
   font-weight: 700;
@@ -145,64 +145,29 @@ div h2 span:hover {
 /*PROJECTS BUTTON STYLING*/
 
 #projectBtn {
-  color: turquoise;
-  cursor: pointer;
-  padding: 10px 25px 10px 25px;
-  position: relative;
-  transition-property: all;
-  transition-duration: 0.6s;
-  transition-timing-function: ease;
-  background-color: transparent;
   text-align: center;
-  text-decoration: none;
-  width: 100%;
-  svg {
-    position: absolute;
-    background-color: transparent;
-    left: 0px;
-    top: 0;
-    width: 100%;
-    height: 37px;
-  }
-  rect {
-    fill: none;
-    stroke: turquoise;
-    stroke-width: 2;
-    stroke-dasharray: 422, 0;
-    transition: all 0.35s linear;
-  }
+  border: 1px solid black;
+  padding: 7px;
+  color: black;
+}
+#projectBtn a {
+  text-decoration: none !important;
 }
 
 #projectBtn:hover {
   background-color: transparent;
   font-weight: 900;
   letter-spacing: 1px;
-  rect {
-    stroke-width: 5;
-    stroke-dasharray: 15, 310;
-    stroke-dashoffset: 48;
-    transition: all 1.3s cubic-bezier(0.19, 1, 0.22, 1);
-  }
-}
-
-@media only screen and(max-width: 750px) {
-  #projectBtn:hover {
-    transition: none;
-    border: 1px solid turquoise;
-    rect {
-      transition: none;
-      stroke-width: 0;
-      stroke-dasharray: 0, 0;
-      stroke-dashoffset: 0;
-    }
-  }
 }
 
 /*PROJECTS (HOMEPAGE)*/
 #frontEndApp {
   background-image: url(/photos/codescreenshot.png);
   background-size: cover;
-  transition: background 3s ease;
+}
+#uxuiCaseStudies {
+  background-image: url(/photos/uxpic.png);
+  background-size: cover;
 }
 
 #projectsTitle {
@@ -227,27 +192,35 @@ div h2 span:hover {
 #projects .projectContainer .projectGroup:hover {
   transform: scale3d(1.1);
 }
+#projects .projectContainer .projectGroup a {
+  text-decoration: none;
+}
 #projects .projectContainer .projectGroup p {
+  font-family: "Bubblegum Sans", cursive;
   text-align: center;
   display: flex;
   align-items: center;
   justify-content: center;
   height: 70px;
-  font-weight: 900;
+  font-weight: bold;
   font-size: 25px;
-  color: black;
+  color: turquoise;
   margin: auto;
-  background-color: white;
+
   margin-top: 170px;
   width: 90%;
 }
 
-/*POROJECTS PAGE */
+/* FRONTEND POROJECTS PAGE */
+#frontEndBody {
+  background-color: #e6e6e6;
+}
 .backBtn a i {
   text-decoration: none;
+  color: black;
   margin: 20px;
-  color: white;
 }
+
 #projectPageTitle {
   text-align: center;
   font-size: 50px;
@@ -278,16 +251,16 @@ figcaption {
 }
 
 figcaption a {
-  border: 1px solid turquoise;
+  border: 1px solid black;
   background-color: transparent;
-  color: turquoise;
+  color: black;
   width: 120px;
   margin-bottom: 10px;
   margin-top: 5px;
   text-decoration: none;
 }
 figcaption a:hover {
-  color: white;
+  color: black;
 }
 /*PHONE SCREEN*/
 
@@ -305,7 +278,8 @@ figcaption a:hover {
   width: 500px;
   margin: auto;
   margin-top: 70px;
-  color: white;
+
+  color: black;
 }
 #ConnectWithMeTitle {
   padding-top: 25px;
@@ -315,18 +289,17 @@ figcaption a:hover {
   padding: 100px 0px;
 }
 .socialMediaIcons a {
-  color: white;
+  color: black;
   margin: 20px;
 }
 .socialMediaIcons a:hover {
-  font-size: 15px;
-  text-decoration: none;
   color: turquoise;
+  text-decoration: none;
 }
 footer {
   justify-content: center;
   display: flex;
-
+  background-color: black;
   color: white;
   padding: 20px;
 }
